# job-analytics

./: .gitignore  Cargo.toml  queries.mongo
ai-analyzer/: Cargo.toml
ai-analyzer/src/: api.rs  db.rs  lib.rs  models.rs  openai_analyzer.rs  types.rs
ai-analyzer/src/openai/: api.rs  boundary.rs  mod.rs
cli/: Cargo.toml
cli/src/: analyze.rs  fix.rs  main.rs  scrape.rs
job-analyzer/: Cargo.toml
job-analyzer/src/: db.rs  lib.rs  main.rs  openai_analyzer.rs
job-scraper/: Cargo.toml  instaffo.html
job-scraper/src/: api.rs  cookies.rs  job_analysis.rs  lib.rs  main.rs  types.rs  xing.rs
job-scraper/src/instaffo/: mod.rs
job-scraper/src/linkedin/: ideas.txt  mod.rs
job-scraper/src/xing/: mod.rs  scraper.rs  types.rs
persistence/: Cargo.toml
persistence/src/: lib.rs
scraper/: Cargo.toml
scraper/src/: api.rs  lib.rs  main.rs  xing.rs
