[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
env_logger = "0.10.0"
serde = { version = "1.0.160", features = ["derive", "std", "unstable"] }
serde_json = "1.0.96"
job-scraper = {path = "../job-scraper"}
futures = "0.3.28"
ai-analyzer = {path = "../ai-analyzer" }
persistence = {path = "../persistence" }
dotenv = "0.15.0"
tokio = { version = "1.27.0", features = ["full"] }
log = "0.4.17"
mongodb = "2.5.0"


