[package]
name = "job-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.3"
env_logger = "0.10.0"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.3"
reqwest = {version="0.11.16", features=["json"] }
scraper = "0.16.0"
serde = {version = "1.0.160", features = ["derive"] }
serde_json = {version="1.0.96", features=["preserve_order"] }
thirtyfour = "0.31.0"
thiserror = "1.0.40"
tokio = { version="1.27.0", features=["full"] }
job-analyzer = {path = "../job-analyzer"}
